@@ -82,6 +82,7 @@ PHP_FUNCTION(ingres2_free_result);
 PHP_FUNCTION(ingres2_autocommit_state);
 PHP_FUNCTION(ingres2_next_error);
 PHP_FUNCTION(ingres2_result_seek);
+PHP_FUNCTION(ingres2_escape_string);
 #else
 PHP_FUNCTION(ingres_connect);
 PHP_FUNCTION(ingres_pconnect);
@@ -119,6 +120,7 @@ PHP_FUNCTION(ingres_free_result);
 PHP_FUNCTION(ingres_autocommit_state);
 PHP_FUNCTION(ingres_next_error);
 PHP_FUNCTION(ingres_result_seek);
+PHP_FUNCTION(ingres_escape_string);
 #endif
 
 ZEND_BEGIN_MODULE_GLOBALS(ii)
